@@ -7,6 +7,7 @@
  * New condition: In pet battle.
  * New condition: Equipment set equipped.
  * New setting for Buff/Debuff icons: Hide if no units.
+ * Added Challenge Mode and 40 Player raid to the Instance Type condition.
  * Bug fixes:
  ** Minimum group frame level is now 5 instead of 1 to prevent issues caused at low frame levels.
  ** Increased the delay on LoadFirstValidIcon from 0.1 seconds to 0.5 seconds in hopes of preventing the AceCD:804 error more often.
@@ -25,6 +26,7 @@
  ** Fixed TellMeWhen: Condition MELEEAP tried to write values to Env different than those that were already in it.
  ** Attempted some fixes at some obscure bugs that can happen with replacement spells (e.g. tracking Immolate in a debuff icon was getting force-changed to Corruption in Affliction spec.)
  ** Removed the blank normaltexture that every icon had because of issues it causes in WoW 5.1
+ ** The Instance Type condition should now work properly.
  
 ===v6.0.3===
  * Re-implemented the stance condition for paladin seals.
